Attempt at pure C++ module for Android

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -1,15 +1,11 @@
-cmake_minimum_required(VERSION 3.4.1)
+cmake_minimum_required(VERSION 3.13)
+
 project(PureCppTurboModuleLibrary)
 
-set (CMAKE_VERBOSE_MAKEFILE ON)
-set (CMAKE_CXX_STANDARD 14)
+add_library(pure-cpp-turbo-module-library SHARED ../cpp/PureCppImpl.cpp)
 
-add_library(pure-cpp-turbo-module-library            SHARED
-            ../cpp/pure-cpp-turbo-module-library.cpp
-            cpp-adapter.cpp
-)
-
-# Specifies a path to native header files.
+# Specifies paths to native header files.
 include_directories(
             ../cpp
+            generated/jni
 )
