Implement Pure Cpp on Android

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -1,11 +1,24 @@
-cmake_minimum_required(VERSION 3.13)
-
+cmake_minimum_required(VERSION 3.4.1)
 project(PureCppTurboModuleLibrary)
 
-add_library(pure-cpp-turbo-module-library SHARED ../cpp/PureCppImpl.cpp)
+set (CMAKE_VERBOSE_MAKEFILE ON)
 
-# Specifies paths to native header files.
-include_directories(
-            ../cpp
-            generated/jni
+add_library(
+    pure-cpp-turbo-module-library
+    STATIC
+    ../cpp/PureCppImpl.cpp
+)
+
+# Specifies a path to native header files.
+target_include_directories(
+    pure-cpp-turbo-module-library
+    PUBLIC
+    ../cpp
+)
+
+target_link_libraries(
+    pure-cpp-turbo-module-library
+    jsi
+    reactnative
+    react_codegen_RNPureCppTurboModuleLibrarySpec
 )
